# bazel-rules

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
appengine/: README.md  defs.bzl  gcloud.sh
appengine/deploy/: main.go
appengine/deployer/: BUILD.bazel  main.go
appengine/test/: BUILD.bazel  app.yaml
qtc/: README.md  defs.bzl
