load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/ccontavalli/gsecret/bazel/deployer",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "deployer",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
